--- a/client/cms/index.html
+++ b/client/cms/index.html
@@ -2,17 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/DinoDiem.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Vite + React</title>
+    <title>Clicker Dino</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 
     <div id="root"></div>
-    <script src="https://kit.fontawesome.com/1d16c05dfb.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/1d16c05dfb.js"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
